Added description to ipynb file.

--- a/android.ipynb
+++ b/android.ipynb
@@ -1,10 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Goal:\n",
+    "### Finding IPhone Users reaction towards Android Tweets\n",
+    "- To get Android tweets,iam using Twitter account of Android.\n",
+    "\n",
+    "- Using tweepy and pickle,creating Android account pickle file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\s534690\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import tweepy\n",
     "from twitter_keys import consumer_key, consumer_secret, access_token, access_secret\n",
@@ -22,8 +44,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data collection\n",
+    "- To get replys for each tweet done by Android Account,iam using tweepy.Cursor.\n",
+    "- Using tweepy.Cursor,iam selecting replys done by iphone users.\n",
+    "- Iam selecting four pages of android account,which contains approxmately 120 replys done by iphone users.\n",
+    "### Sentiment analysis\n",
+    "- Using sentiment analysis to analyse the data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -36,15 +70,21 @@
     "for page in tweepy.Cursor(api.search, q='@Android', count=100, tweet_mode='extended').pages(4):\n",
     "    for devices in page:\n",
     "        if devices._json['source']=='<a href=\"http://twitter.com/download/iphone\" rel=\"nofollow\">Twitter for iPhone</a>':\n",
-    "            iphone.append(get_sentiments(devices._json['full_text']))\n",
-    "            \n",
-    "        if devices._json['source']=='<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>':\n",
-    "            android.append(get_sentiments(devices._json['full_text']))\n"
+    "            iphone.append(get_sentiments(devices._json['full_text']))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualization of results:\n",
+    "#### scatter graph:\n",
+    "- Visualizing data using scatter graph where Negative and positive sentiments are x and y axis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,8 +126,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Histogram\n",
+    "- Compound values and Number of Iphone users are x and y axis for the below histogram."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +186,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pie chart:\n",
+    "- Based on sentiment analysis,representing sentiments using pie chart.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +220,24 @@
     "plt.savefig(\"pie.png\",transparent='True')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusions/outcomes:\n",
+    "- Based on the results I can make some assertions.\n",
+    "- IPhone users are not so positive towards tweets done in Android account which resembles that they are not much satisfied with tweets.\n",
+    "- Approximately 85% of IPhone users are neutral and negative  when there is a tweet in Android account."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
